feature(cms): add Wikimedia CMS connector
- Introduced `WikimediaConnector` for integrating with MediaWiki content.
- Added project and resource listing methods with placeholder/initial implementations.
- Registered connector with the CMS framework for plugin load/unload support.
- Configured build system with `build.gradle` and `gradle.properties` for module setup.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>